<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Colores"
    android:layout_margin="40dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colores"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif"


        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"

        >
        <ImageView
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/rojo"
            android:layout_gravity="center"

            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/red"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:backgroundTint="#070504"





            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"

        >
        <ImageView
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/azul"
            android:layout_gravity="center"

            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/blue"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:backgroundTint="#070504"




            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"

        >
        <ImageView
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/rojo"
            android:layout_gravity="center"

            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/pink"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:backgroundTint="#070504"



            />



    </LinearLayout>

</LinearLayout>